Modificaciones para implementacion de AJAX en login y carga de formularios

--- a/view/css/login.css
+++ b/view/css/login.css
@@ -42,7 +42,7 @@ input,textArea {
     text-align: center;
     font-size: 20px;
 }
-.contenido{
+.content{
     width: 430px;
     margin: auto;
     text-align:center;  
