Implementacion de AJAX al procesar de formularios

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -176,6 +176,7 @@ header{
     background:rgba(0,0,0,0.5);
     box-shadow: 3px 5px 15px black;
     padding:20px;
+    display: none;
 
 }
 .alert_info {
