Andron ->Incorporacion de vehiculos . se incorporaron las placas de los vehiculos para la llave foranea de la base de datos.

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -18,7 +18,7 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
 }
-input,textArea {
+input,textArea,select {
     border-radius: 5px 5px 5px;
     background:rgba(0,0,0,0.2);
     color: grey;
