Andron ->Creacion de procesos de tiempos se crean los nuevos metodos en las clases para almacenar los viajes y pedidos.

--- a/view/css/style.css
+++ b/view/css/style.css
@@ -25,7 +25,7 @@ input,textArea,select {
     border: 1px solid grey;
 
 }
-button{
+button,input[submit]{
     margin-top:15px;
     border-radius: 5px 5px 5px;
     width: 100px;
